<resources>
    <string name="app_name">Health Upgrade</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="btn_add_later">ADD LATER</string>
    <string name="finish">FINISH</string>

    <!--Personal Details-->
    <string name="personal_details_heading">Lets get a few details.</string>
    <string name="personal_details_subtitle">Personal Details</string>
    <string name="activity_gauge_subtitle">Activity Gauge</string>
    <string name="activity_gauge_explanation">The activity gauge us how active you are
    in your daily routines. By setting your activity gauge you help us adjust to your needs</string>
    <string name="fullname_txt">Your full name</string>
    <string name="Age_txt">Your age</string>
    <string name="gender_txt">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="actvity_gauge_hint">Choose how active you are:</string>

    <!--Weight Details-->
    <string name="weight_details_heading">What about your current weight?</string>
    <string name="weight_details_subtitle">Weight Details</string>
    <string name="your_weight">Your weight</string>
    <string name="weight_goals_subtitle">Weight Goals</string>
    <string name="weight_goal_explanation">Weight goals help keep track of your weight goals and enrich the apps usage</string>
    <string name="weight_goal_choice_hint">Choose a Goal:</string>
    <string name="weight_target_hint">Add a weight target:</string>
    <string name="weight_target_explanation">Set a target for a more enriching experience</string>
    <string name="weight_height_hint">0</string>
    <string name="kg_s">kg(s)</string>
    <string name="weight_input_hint">Add your weight:</string>

    <!--Height Details-->
    <string name="height_details_heading">Add your height too.</string>
    <string name="height_details_subtitle">Height Details</string>
    <string name="height_input_hint">Add your height:</string>
    <string name="ft">ft</string>

    <!--Details Overview-->
    <string name="details_overview_heading">Is this correct?</string>
    <string name="details_overview_subheading">Details Overview</string>
    <string name="fullname_test">ERICK NJIRU KIRABUI</string>
    <string name="full_name">Full name</string>
    <string name="DOB_test">2000–11–11</string>
    <string name="weight_test">120 lb</string>
    <string name="height_test">120 ft</string>
    <string name="curent_weight">Current Weight</string>
    <string name="current_height">Current Height</string>
    <string name="gender_test">Male</string>
    <string name="gender">Gender</string>
    <string name="age_test">24</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date of Birth</string>

    <string name="lower_string">A healthy life is a prosperous life</string>

    <!--Weight Overview-->
    <string name="weight_activity_label">Weight Overview</string>
    <string name="weight">Weight</string>
    <string name="bmi">BMI</string>
    <string name="entries">Entries</string>
    <string name="title_activity_weight_entry">Add Your Weight</string>
    <string name="zero">0</string>
    <string name="tags">Add a tag</string>
    <string name="height">height</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="details">Details</string>
    <string name="add_a_note">Add a note</string>
    <string name="weight_note_hint">How did you do it?</string>
    <string name="progress_photo_hint">Add a progress photo</string>

    <!--Tags Activity-->
    <string name="title_activity_tags">Tags</string>
    <string name="add_a_tag">Add a tag</string>
    <string name="tag_name_hint">name</string>
    <string name="tag_description_hint">description</string>
    <string name="tag_primary_color_hint">Set your primary colour</string>
    <string name="tag_secondary_colour_hint">Set your secondary colour</string>
    <string name="tag_primary_color_picker_title">Set your primary colour</string>
    <string name="tag_secondary_color_picker_title">Set you secondary colour</string>

    <string name="title_activity_food_nutrition_overview">Food And Nutrition</string>

    <!--Home Activity-->
    <string name="home_overview_page">HOME OVERVIEW PAGE</string>
    <string name="home_navigation_item">Home</string>
    <string name="weight_navigation_item">Weight</string>
    <string name="food_navigation_item">Food And Nutrition</string>
    <string name="exit_navigation_item">Exit</string>
    <string name="settings_navigation_item">Settings</string>
    <string name="tags_navigation_item">Tags</string>
    <string name="navigation_close">Close</string>
    <string name="navigation_open">Open</string>
    <string name="home_activity_title">Overview</string>

    <!--Exercise Activity-->
    <string name="title_activity_exercise_entry">Step Counter</string>
    <string name="steps_counter_hint">Steps</string>
    <string name="fab_steps">Start tracking your steps</string>
    <string name="fab_weight">Log your weight</string>
    <string name="steps">steps</string>
    <string name="Time">Time</string>
    <string name="play_or_pause_btn">play or pause</string>
    <string name="duration_hint">Duration</string>
    <string name="_0">0</string>
    <string name="kcal_s">kcal(s)</string>
    <string name="km_s">km(s)</string>
    <string name="title_activity_steps_counter">Map</string>
    <string name="title_activity_exercise_overview">Exercise Overview</string>
    <string name="calories_header">Calories Burnt</string>
    <string name="distance">Distance</string>
    <string name="finish_btn">FINISH</string>
    <string name="exercise_navigation_item">Exercise</string>


    <!--Notifications -->
    <string name="step_counter_notification_id">1</string>
    <string name="step_counter_notification_channel">Exercise</string>
    <string name="step_counter_notification_hint">Tracking your steps</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>

    <string name="title_activity_exercise_view">Steps</string>

    <!--Pace Details-->
    <string name="pace_details_title">Pace Details</string>
    <string name="pace_max">Pace(max)</string>
    <string name="pace_average">Avg. Pace</string>
    <string name="km_per_second">km/s</string>
    <string name="bpm">(BPM)</string>
    <string name="heart_details_title">Heart Rate Details</string>
    <string name="heart_rate_max">Heart Rate (Max)</string>
    <string name="avg_heart_rate">Avg. Heart Rate</string>
    <string name="sunday">sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="calories">Calories</string>
    <string name="intake">Intake</string>
    <string name="kcal">Kcal</string>
    <string name="_2300">2300</string>
    <string name="outtake">Outtake</string>
    <string name="total">Total</string>
    <string name="_60">60%</string>
    <string name="goal_78kg_s">Goal: 78kg(s)</string>
    <string name="_80">80</string>
    <string name="_24_9">24.9</string>
    <string name="recommended">Recommended:</string>
    <string name="_2_ltr_s_3_ltr_s">2 ltr(s) - 3 ltr(s)</string>
    <string name="goal_2_ltr_s">Goal: 2 ltr(s)</string>
    <string name="water_intake">Water Intake</string>
    <string name="ltr_s">ltr(s)</string>
    <string name="_730">730</string>
    <string name="_800">800</string>


</resources>
