<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_module_menu_item"
            android:title="@string/home_navigation_item"
            android:icon="@drawable/ic_home" />
        <item
            android:id="@+id/weight_module_menu_item"
            android:title="@string/weight_navigation_item"
            android:icon="@drawable/ic_weight_scale_black"/>
        <item
            android:id="@+id/food_module_menu_item"
            android:title="@string/food_navigation_item"
            android:icon="@drawable/ic_dinner"/>
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/tags_menu_item"
                android:title="@string/tags_navigation_item"
                android:icon="@drawable/tags"/>
            <item
                android:id="@+id/settings_menu_item"
                android:title="@string/settings_navigation_item"
                android:icon="@drawable/ic_settings"/>
            <item
                android:id="@+id/exit_menu_item"
                android:title="@string/exit_navigation_item"
                android:icon="@drawable/ic_logout"/>
        </menu>
    </item>


</menu>