<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.flycode.droidcafe.MainActivity">

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="10"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit_white"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="20"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>