<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:padding="5dp"
    android:weightSum="100"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name"
        android:layout_weight="20"
        android:padding="5dp"
        android:layout_gravity="start"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="20"
        android:gravity="center"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/tv_steps_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:gravity="center"
            android:textColor="@color/bg_dark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textStyle="bold"
            android:textColor="@color/bg_dark"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="35"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/tv_duration_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/duration_hint"
            android:textColor="@color/bg_dark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00:00"
            android:textStyle="bold"
            android:textColor="@color/bg_dark"
            android:textSize="25sp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/play_or_pause_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/ic_play_circle_filled_green"
        android:contentDescription="@string/play_or_pause_btn"
        android:layout_weight="25"
        android:clickable="true"
        android:onClick="onPauseOrPlay"
        android:layout_gravity="end"/>

</LinearLayout>