<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:orientation="vertical"
    android:padding="@dimen/app_init_padding"
    tools:context=".ui.appInitialization.HeightDetails.HeightDetailsFragment">

    <!--TITLE-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingBottom="20dp"
        android:text="@string/height_details_heading"
        android:textColor="@color/app_init_titles"
        android:textSize="@dimen/app_init_headings" />

    <!--HEIGHT DETAILS-->
    <!--SUBTITLE-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/height_details_subtitle"
        android:textColor="@color/app_init_titles"
        android:textSize="@dimen/app_init_subheadings" />
    <View
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/app_init_padding"
        android:layout_marginTop="5dp"
        android:background="@color/lightGray_txt" />

    <!--HEIGHT INPUT-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/your_weight"
            android:paddingEnd="20dp"
            android:paddingStart="0dp"
            android:src="@drawable/ic_003_gym" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/height_input_hint"
                android:textColor="@color/Primary"
                android:textSize="@dimen/app_init_fieldHintTitles"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txt_height"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:background="@drawable/app_init_inputfields"
                    android:hint="@string/weight_height_hint"
                    android:inputType="number"
                    android:textAlignment="textEnd"
                    android:textColor="@color/app_init_input_txt"
                    android:textColorHint="@color/app_init_input_txt"
                    android:textSize="40sp" />
                <!--TODO: implement scrollable unit selector-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/ft"
                    android:textColor="#fff"
                    android:textSize="@dimen/units_label_size" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>