<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="PaceDetailsBinding">
        <variable
            name="steps"
            type="com.flycode.healthbloom.data.models.Steps"/>
    </data>
    <com.google.android.flexbox.FlexboxLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:hint="@string/_0"
                android:textColorHint="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tv_calories_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_per_second"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pace_max"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:contentDescription="@string/time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:hint="@string/_0"
                android:textColorHint="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tv_distance_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_per_second"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pace_average"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:contentDescription="@string/time" />

    </LinearLayout>
</com.google.android.flexbox.FlexboxLayout>
</layout>